[gd_scene load_steps=17 format=3 uid="uid://bps4vwvcpajwt"]

[ext_resource type="Script" path="res://Scripts/frontDoor2.gd" id="1_2fahf"]
[ext_resource type="Script" path="res://Scripts/frontDoor.gd" id="1_x5p1e"]
[ext_resource type="AudioStream" uid="uid://jrl36piubi6l" path="res://Audio/theDorIsClosed.wav" id="2_gf7r5"]
[ext_resource type="AudioStream" uid="uid://dg34fd4titkwh" path="res://Audio/openDoor.wav" id="2_ko3s4"]
[ext_resource type="ArrayMesh" uid="uid://ddrcysnb0piw4" path="res://Sprites/key.obj" id="5_obn2o"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qfet8"]
albedo_color = Color(0.25098, 0.168627, 0.137255, 1)
metallic = 0.64

[sub_resource type="BoxMesh" id="BoxMesh_ljwg3"]
material = SubResource("StandardMaterial3D_qfet8")
size = Vector3(0.1, 3.3, 1.6)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_7fffu"]
points = PackedVector3Array(0.05, 1.65, 0.8, -0.05, 1.65, 0.8, 0.05, -1.65, 0.8, 0.05, 1.65, -0.8, -0.05, 1.65, -0.8, -0.05, -1.65, 0.8, 0.05, -1.65, -0.8, -0.05, -1.65, -0.8)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1uenw"]
albedo_color = Color(0.189878, 0.122224, 0.0945418, 1)
metallic = 0.64

[sub_resource type="BoxMesh" id="BoxMesh_08ko6"]
material = SubResource("StandardMaterial3D_1uenw")
size = Vector3(0.056, 3.45, 1.8)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cmesn"]
albedo_color = Color(0.160784, 0.156863, 0.133333, 1)
metallic = 0.64
metallic_specular = 0.28
metallic_texture_channel = 4
roughness = 0.57

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ueqr3"]
material = SubResource("StandardMaterial3D_cmesn")
radius = 0.1
height = 0.3

[sub_resource type="CylinderMesh" id="CylinderMesh_eypk8"]
material = SubResource("StandardMaterial3D_cmesn")
top_radius = 0.1
bottom_radius = 0.1
height = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ylwmk"]
albedo_color = Color(0.121569, 0.0705882, 0.054902, 1)
metallic = 0.64

[sub_resource type="BoxMesh" id="BoxMesh_6gme0"]
material = SubResource("StandardMaterial3D_ylwmk")
size = Vector3(0.2, 3.45, 0.2)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_k2jq3"]
points = PackedVector3Array(-0.1, -1.725, -0.1, -0.1, -1.725, 0.1, -0.1, 1.725, -0.1, 0.1, -1.725, -0.1, 0.1, -1.725, 0.1, -0.1, 1.725, 0.1, 0.1, 1.725, -0.1, 0.1, 1.725, 0.1)

[node name="Door" type="Node3D"]
script = ExtResource("1_2fahf")

[node name="Pivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.0948489)

[node name="PhysicDoor" type="StaticBody3D" parent="Pivot" groups=["door", "interactable"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0948489)
collision_layer = 32769
collision_mask = 32769
script = ExtResource("1_x5p1e")

[node name="CollisionMesh" type="MeshInstance3D" parent="Pivot/PhysicDoor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00137329, 0.0019049, -0.978199)
mesh = SubResource("BoxMesh_ljwg3")
skeleton = NodePath("../MeshInstance3D")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Pivot/PhysicDoor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00137329, 0.0019049, -0.978199)
shape = SubResource("ConvexPolygonShape3D_7fffu")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Pivot/PhysicDoor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00137329, 0.0019049, -0.978199)
mesh = SubResource("BoxMesh_08ko6")
skeleton = NodePath("")

[node name="Timer" type="Timer" parent="Pivot/PhysicDoor"]
wait_time = 0.6

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Pivot/PhysicDoor"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, -1.6152)
mesh = SubResource("CapsuleMesh_ueqr3")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Pivot/PhysicDoor"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0.265795, -1.6152)
mesh = SubResource("CylinderMesh_eypk8")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Pivot/PhysicDoor"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0.525744, -1.615)
mesh = SubResource("CylinderMesh_eypk8")

[node name="Locked" type="AudioStreamPlayer3D" parent="Pivot/PhysicDoor"]
stream = ExtResource("2_gf7r5")
pitch_scale = 1.62

[node name="Open" type="AudioStreamPlayer3D" parent="Pivot/PhysicDoor"]
stream = ExtResource("2_ko3s4")
volume_db = -26.0

[node name="keys" type="Node3D" parent="Pivot/PhysicDoor"]

[node name="Key2" type="MeshInstance3D" parent="Pivot/PhysicDoor/keys"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.0999999, -0.508535, -1.63406)
visible = false
mesh = ExtResource("5_obn2o")
skeleton = NodePath("../../../..")

[node name="Key1" type="MeshInstance3D" parent="Pivot/PhysicDoor/keys"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.1, -0.248815, -1.6338)
visible = false
mesh = ExtResource("5_obn2o")
skeleton = NodePath("../../../..")

[node name="DoorFrame" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0116983)
collision_layer = 8
collision_mask = 15

[node name="MeshInstance3D" type="MeshInstance3D" parent="DoorFrame"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00415838, 0.0137367)
mesh = SubResource("BoxMesh_6gme0")

[node name="CollisionShape3D" type="CollisionShape3D" parent="DoorFrame"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00415838, 0.0137367)
shape = SubResource("ConvexPolygonShape3D_k2jq3")

[connection signal="timeout" from="Pivot/PhysicDoor/Timer" to="Pivot/PhysicDoor" method="_on_timer_timeout"]
